--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "log": "react-native log-android"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.3.2",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-image-picker": "^5.6.1",
+    "react-native-inset-shadow": "^1.0.3",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
+    "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "^13.11.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
@@ -25,6 +35,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/metro-config": "^0.76.3",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "jest": "^29.2.1",
