--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,13 @@ yarn-error.log
 
 # testing
 /coverage
+
+#Yarn
+#
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
