--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.3.2",
+    "@react-navigation/native": "^6.1.7",
     "react": "18.2.0",
     "react-native": "0.72.1",
-    "react-native-paper": "^5.9.1",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
+    "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "^13.13.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
