--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.7",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
