--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@react-native-community/blur": "^4.3.2",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-paper": "^5.10.3",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-shadow-2": "^7.0.8",
@@ -33,6 +35,7 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.5",
     "react-test-renderer": "18.2.0",
