--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
   "engines": {
     "node": ">=16"
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@3.6.3",
+  "types": "./src/*.d.ts"
 }
