--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-community/blur": "^4.3.2",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.10.3",
+    "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.13.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
