--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
     "@react-native-community/blur": "^4.3.2",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -22,6 +25,7 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-mmkv": "^2.10.2",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.10.3",
     "react-native-reanimated": "^3.4.2",
@@ -30,7 +34,8 @@
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.13.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -51,6 +56,5 @@
   "engines": {
     "node": ">=16"
   },
-  "packageManager": "yarn@3.6.3",
-  "types": "./src/*.d.ts"
+  "packageManager": "yarn@3.6.3"
 }
