--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-mmkv": "^2.10.2",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.10.3",
     "react-native-reanimated": "^3.4.2",
