--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,3 +20,16 @@ buildscript {
         classpath('com.google.gms:google-services:4.3.15')
     }
 }
+
+allprojects {
+    repositories {
+
+        // * Your other repositories here *
+
+        // * Add a new maven block after other repositories / blocks *
+        maven {
+            // expo-camera bundles a custom com.google.android:cameraview
+            url "$rootDir/../node_modules/expo-camera/android/maven"
+        }
+    }
+}
