--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react-native-vector-icons": "^6.4.14",
+    "expo": "^49.0.0",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "^2.12.1",
