Fix GoBack btn, seach bar color, ImgForm post data Add ISBN Scanner

--- a/app.json
+++ b/app.json
@@ -5,9 +5,7 @@
     "plugins": [
       [
         "expo-camera",
-        {
-          "cameraPermission": "Allow AReader to access your camera."
-        }
+        "expo-barcode-scanner"
       ]
     ]
   }
