--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react-native-vector-icons": "^6.4.14",
     "expo": "^49.0.0",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "react": "18.2.0",
