--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "AReader",
   "version": "0.0.1",
   "private": true,
+  "description": "DEPRECATED - AReader is a mobile application that allows users to add AR annotations to books.",
   "scripts": {
     "android": "react-native run-android",
     "arch": "react-native run-android --active-arch-only",
@@ -13,19 +14,19 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
     "@react-native-community/blur": "^4.3.2",
-    "@react-native-firebase/app": "^18.5.0",
-    "@react-native-firebase/auth": "^18.5.0",
-    "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-google-signin/google-signin": "^8.2.2",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react-native-vector-icons": "^6.4.14",
-    "expo": "^49.0.0",
+    "expo": "^45.0.8",
     "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "react": "18.2.0",
-    "react-native": "0.72.1",
+    "react-native": "^0.72.17",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^5.6.1",
     "react-native-linear-gradient": "^2.8.2",
